<resources>
    <string name="app_name">SeekBarPreference demo</string>
    <string name="app_description">An application demonstrating the Android SeekBarPreference library.</string>
    <string name="action_about">About</string>

    <string name="Preference1Title">Example 1</string>
    <string name="Preference1Summary">A preference starting from 5 to 25, with a step of 1.</string>
    <string name="Preference1Format">%d mn</string>

    <string name="Preference2Title">Example 2</string>
    <string name="Preference2Summary">A preference starting from 0 to 100, with a step of 5.</string>
    <string name="Preference2Format">%d%%</string>

    <string name="Preference3Title">Example 3</string>
    <string name="Preference3Summary">A preference without displaying the current value.</string>

    <string name="Preference4Title">Example 4 without summary</string>
    <string name="Preference4Format">%d kg</string>

    <string name="Preference5Title">Example 5</string>
    <string name="Preference5Summary">A preference with a very long summary, in order to be displayed on multiple lines. This of course depends on your screen size and density. The quick brown fox jumps over the lazy dog.</string>
    <string name="Preference5Format">%d meters</string>

    <string name="Preference6Title">Example 6</string>
    <string name="Preference6Summary">A preference faking a float value, by using displayDividerValue.</string>
</resources>
